@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.xbmctools" name="XBMC Tools" version="1.1.1" provider-name="Anonymous">
+<addon id="plugin.video.xbmctools" name="XBMC Tools" version="1.1.2" provider-name="Anonymous">
   <requires>
     <import addon="xbmc.python" version="2.1.0"/>
   </requires>
@@ -10,7 +10,8 @@
     <language>en</language>
     <platform>all</platform>
     <summary lang="en">XBMC Tools</summary>
-    <description lang="en">Algumas ferramentas necessarias</description>
+    <description lang="pt">Algumas ferramentas necessarias.</description>
+    <description lang="en">Some necessary tools.</description>
     <platform>all</platform>
   </extension>
 </addon>
